my-apps/guestbook-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: guestbook-test
  labels:
    name: guestbook-test
    app: guestbook-test
