my-apps/guestbook-test/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: guestbook-test
  labels:
    app: redis
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 6379
    targetPort: redis
  selector:
    app: redis
    tier: backend
